added inverse part

--- a/Introduction_to_MNE.ipynb
+++ b/Introduction_to_MNE.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b9e25e4ff6783dcc7003ec313f31c488cc321dcc9f43352585ad5690b29538dd"
+  "signature": "sha256:287e65e41418ea43e46dff6fab49a5fc9339c00825696f1cc7ee0720277e2127"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3308,19 +3308,54 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "load forward model"
+     ]
+    },
+    {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
-      "whos"
+      "mri = data_path + \"sef_bilat-tsss-mc-autobad-epochs.fif\"\n",
+      "fwd = mne.read_forward_solution(\"sef_bilat-tsss-mc-autobad-fwd.fif\")\n",
+      "\n",
+      "# convert to surface orientation for better visualization\n",
+      "fwd = mne.convert_forward_solution(fwd, surf_ori=True)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Compute inverse solution"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "# inversion variables\n",
+      "snr = 1.0\n",
+      "lambda2 = 1.0 / snr ** 2\n",
+      "methods = [\"dSPM\", \"MNE\"]\n",
+      "\n",
+      "for method in methods:\n",
+      "    \"\"\" loop over methods to make inverse operator for each method\n",
+      "    \"\"\"\n",
+      "    inv_op = make_inverse_operator(raw.info, forward=fwd,\n",
+      "                                          noise_cov=cov,\n",
+      "                                          loose=0.2, depth=0.8)\n",
+      "#    write_inverse_operator(\n",
+      "#        \"sef_bilat-tsss-mc-autobad%s-inv.fif\"\n",
+      "#        % (method), inv_op_normal)\n"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
