--- a/Introduction_to_MNE.ipynb
+++ b/Introduction_to_MNE.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:167524b62c589832280ec5a7e7da2812a67dda6b22dd89e6d60fa85c16840918"
+  "signature": "sha256:37532b17c9b4acad4077e82a1f70e817afd5c964c4f7d06afe28483ebd6baa2a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3508,6 +3508,34 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Bits"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "events = mne.find_events(raw, stim_channel='STI101')\n",
+      "event_ids = {\"press\": 1}\n",
+      "events_classic = []\n",
+      "events_interupt = []\n",
+      "\n",
+      "for i in range(len(events)):\n",
+      "    if i > 0:\n",
+      "        if events[i, 2] == 1 and events[i - 1, 2] == 1:\n",
+      "            events_classic.append(i)\n",
+      "        elif events[i, 2] == 1 and events[i - 1, 2] == 2:\n",
+      "            events_interupt.append(i)\n"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
