added Maxfilter call

--- a/Introduction_to_MNE.ipynb
+++ b/Introduction_to_MNE.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:37532b17c9b4acad4077e82a1f70e817afd5c964c4f7d06afe28483ebd6baa2a"
+  "signature": "sha256:47a623ed2dc8a6e52df9217f71db0227ec7b29d26e42c357e215f64f0b119964"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -64,6 +64,46 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Maxfilter from python"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# file and log names\n",
+      "\n",
+      "in_name = \"sub_%d_%s-raw.fif\" % (sub, session)\n",
+      "out_name = \"sub_%d_%s-tsss-mc-autobad_ver_4.fif\" % (sub, session)\n",
+      "tsss_mc_log = \"sub_%d_%s-tsss-mc-autobad_ver_4.log\" % (sub, session)\n",
+      "headpos_log = \"sub_%d_%s-headpos_ver_4.log\" % (sub, session)\n",
+      "\n",
+      "# call to maxfilter\n",
+      "\n",
+      "apply_maxfilter(in_fname=in_name,\n",
+      "       out_fname=out_name,\n",
+      "       frame='head',\n",
+      "       autobad=\"on\",\n",
+      "       st=True,\n",
+      "       st_buflen=30,\n",
+      "       st_corr=0.95,\n",
+      "       mv_comp=True,\n",
+      "       mv_hp=headpos_log,\n",
+      "       cal='/projects/MINDLAB2011_24-MEG-readiness/misc/sss_cal_Mar11-May13.dat',\n",
+      "       ctc='/projects/MINDLAB2011_24-MEG-readiness/misc/ct_sparse_Mar11-May13.fif',\n",
+      "       overwrite=True,\n",
+      "       mx_args=' -v | tee %s' % tsss_mc_log,\n",
+      "       )"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "heading",
