--- a/RDC_and_mount.ipynb
+++ b/RDC_and_mount.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,15 +66,49 @@
    "source": [
     "from IPython.display import Image\n",
     "from IPython.core.display import HTML \n",
-    "Image(url= \"https://github.com/MadsJensen/Intro_to_Linux_Bash_and_MNE/blob/master/projects_file_system.jpg\")"
+    "Image(url= \"https://github.com/MadsJensen/Intro_to_Linux_Bash_and_MNE/blob/master/projects_file_system.jpg\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image of Yaktocat](https://www.dropbox.com/s/2kelm3pw9zatnot/projects_file_system.jpg?dl=0)"
+    "![test](https://github.com/MadsJensen/Intro_to_Linux_Bash_and_MNE/blob/master/projects_file_system.jpg, \"test\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://github.com/MadsJensen/Intro_to_Linux_Bash_and_MNE/blob/master/projects_file_system.jpg\" alt=\"alt text\" title=\"Title\" />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
