--- a/RDC_and_mount.ipynb
+++ b/RDC_and_mount.ipynb
@@ -52,7 +52,7 @@
     {
      "data": {
       "text/html": [
-       "<img src=\"https://github.com/MadsJensen/Intro_to_Linux_Bash_and_MNE/blob/master/projects_file_system.jpg\"/>"
+       "<img src=\"https://www.dropbox.com/s/2kelm3pw9zatnot/projects_file_system.jpg\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
