--- a/RDC_and_mount.ipynb
+++ b/RDC_and_mount.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Access your data from your own computer #"
+    "# Remote Desktop and Mounting  #"
    ]
   },
   {
@@ -27,7 +27,7 @@
     "\n",
     "- Graphical interface\n",
     "- Login from both DNC & outside\n",
-    "\t- VPN-like"
+    "\t- VPN-like (again see the wiki)"
    ]
   },
   {
@@ -43,79 +43,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"https://github.com/MadsJensen/Intro_to_Linux_Bash_and_MNE/blob/master/projects_file_system.jpg\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "from IPython.display import Image\n",
-    "from IPython.core.display import HTML \n",
-    "Image(url= \"https://github.com/MadsJensen/Intro_to_Linux_Bash_and_MNE/blob/master/projects_file_system.jpg\")\n"
+    "### Projects structure ###\n",
+    "```\n",
+    "/\n",
+    "    |-MyProject \\n\n",
+    "        |- raw\n",
+    "        |- scratch\n",
+    "        |- scripts\n",
+    "        |- misc\n",
+    "        |- results\n",
+    "        |- docs\n",
+    "    \n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![test](https://github.com/MadsJensen/Intro_to_Linux_Bash_and_MNE/blob/master/projects_file_system.jpg, \"test\")"
+    "**On mac**\n",
+    "\n",
+    "```\n",
+    "/Volumes/*server*\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://github.com/MadsJensen/Intro_to_Linux_Bash_and_MNE/blob/master/projects_file_system.jpg\" alt=\"alt text\" title=\"Title\" />"
+    "** On Windows**\n",
+    "\n",
+    "Get a drive letter\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- SSHFS \n",
-    "- SSH\n",
+    "## SSH ##\n",
     "\t- *Inside* DNC -> drive\n",
     "\t- *Outside* DNC -> terminal"
    ]
@@ -123,7 +94,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Hidden option ####\n",
+    "* SSHFS"
+   ]
   }
  ],
  "metadata": {
